<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:enabled="true"
        android:icon="@drawable/image"
        android:shortcutDisabledMessage="@string/shortcut_disabled"
        android:shortcutId="100"
        android:shortcutLongLabel="@string/shortcut_photo_long"
        android:shortcutShortLabel="@string/pick_color_from_image">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetClass="com.mrgames13.jimdo.colorconverter.app.ui.activity.MainActivity"
            android:targetPackage="com.mrgames13.jimdo.colorconverter" >
            <extra android:name="action" android:value="image" />
        </intent>
        <categories android:name="android.shortcut.app" />
    </shortcut>
</shortcuts>