<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright © Marc Auberer 2017-2021. All rights reserved
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="20dp"
    android:weightSum="3">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialogHContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/h">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialogH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:maxLength="6"
            android:inputType="numberDecimal"
            android:imeOptions="actionNext"
            android:selectAllOnFocus="true"
            android:importantForAutofill="no"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialogSContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/s">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialogS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:maxLength="4"
            android:inputType="numberDecimal"
            android:imeOptions="actionNext"
            android:selectAllOnFocus="true"
            android:importantForAutofill="no"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/dialogVContainer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="@string/v">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dialogV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:maxLength="4"
            android:inputType="numberDecimal"
            android:imeOptions="actionNext"
            android:selectAllOnFocus="true"
            android:importantForAutofill="no"/>
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>