<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".App.MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:theme="@style/toolbarStyle"
        android:title="@string/app_name"
        android:fitsSystemWindows="true" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

            <TextView
                android:id="@+id/tv_01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/selection_"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <SeekBar
                android:id="@+id/color_red"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/tv_01"
                android:max="@integer/rgb_max_value"/>

            <SeekBar
                android:id="@+id/color_green"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/color_red"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:max="@integer/rgb_max_value"/>

            <SeekBar
                android:id="@+id/color_blue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/color_green"
                android:layout_marginTop="15dp"
                android:max="@integer/rgb_max_value"/>

            <LinearLayout
                android:id="@+id/container_rgb_labels"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/color_blue"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:id="@+id/tv_r_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="R"
                    android:textStyle="bold"
                    android:textSize="23sp"
                    android:gravity="center"
                    android:textColor="@color/red"/>

                <TextView
                    android:id="@+id/tv_g_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="G"
                    android:textStyle="bold"
                    android:textSize="23sp"
                    android:gravity="center"
                    android:textColor="@color/green"/>

                <TextView
                    android:id="@+id/tv_b_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="B"
                    android:textStyle="bold"
                    android:textSize="23sp"
                    android:gravity="center"
                    android:textColor="@color/blue"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/container_rgb_values"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/container_rgb_labels"
                android:layout_marginTop="5dp"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:id="@+id/tv_r"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0"
                    android:textStyle="bold"
                    android:textSize="23sp"
                    android:gravity="center"
                    android:textColor="@color/red"/>

                <TextView
                    android:id="@+id/tv_g"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0"
                    android:textStyle="bold"
                    android:textSize="23sp"
                    android:gravity="center"
                    android:textColor="@color/green"/>

                <TextView
                    android:id="@+id/tv_b"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="0"
                    android:textStyle="bold"
                    android:textSize="23sp"
                    android:gravity="center"
                    android:textColor="@color/blue"/>
            </LinearLayout>

            <RelativeLayout
                android:id="@+id/color_container_outer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/container_rgb_values"
                android:background="@color/black"
                android:padding="1dp"
                android:layout_marginTop="15dp">

                <RelativeLayout
                    android:id="@+id/color_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="40dp"
                    android:background="@color/black">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:orientation="vertical"
                        android:weightSum="2">

                        <ImageView
                            android:id="@+id/load_color"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:layout_marginLeft="5dp"
                            android:src="@drawable/ic_folder_open"
                            android:layout_marginBottom="3dp"/>

                        <ImageView
                            android:id="@+id/save_color"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:layout_marginLeft="5dp"
                            android:src="@drawable/ic_save" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/rgb_display"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="RGB: 0, 0, 0"
                        android:textColor="@color/white"
                        android:layout_centerHorizontal="true"
                        android:textIsSelectable="true"
                        android:textSize="18sp"/>

                    <ImageView
                        android:id="@+id/rgb_copy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_copy"
                        android:layout_alignParentRight="true"
                        android:layout_alignTop="@id/rgb_display"
                        android:layout_alignBottom="@id/rgb_display"/>

                    <TextView
                        android:id="@+id/hex_display"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="HEX: #000000"
                        android:textColor="@color/white"
                        android:layout_centerHorizontal="true"
                        android:textIsSelectable="true"
                        android:textSize="18sp"
                        android:layout_below="@id/rgb_display"/>

                    <ImageView
                        android:id="@+id/hex_copy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_copy"
                        android:layout_alignParentRight="true"
                        android:layout_alignTop="@id/hex_display"
                        android:layout_alignBottom="@id/hex_display"/>

                    <TextView
                        android:id="@+id/hsv_display"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="HSV: 0.00, 0.00, 0.00"
                        android:textColor="@color/white"
                        android:layout_centerHorizontal="true"
                        android:textIsSelectable="true"
                        android:textSize="18sp"
                        android:layout_below="@id/hex_display"/>

                    <ImageView
                        android:id="@+id/hsv_copy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_copy"
                        android:layout_alignParentRight="true"
                        android:layout_alignTop="@id/hsv_display"
                        android:layout_alignBottom="@id/hsv_display"/>

                </RelativeLayout>
            </RelativeLayout>

            <Button
                android:id="@+id/pick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pick_color"
                android:layout_below="@+id/color_container_outer"
                android:layout_marginTop="5dp"/>

            <Button
                android:id="@+id/pick_random_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pick_random_color"
                android:layout_below="@+id/pick"
                android:layout_marginTop="5dp"/>

            <Button
                android:id="@+id/pick_from_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/pick_color_from_image"
                android:layout_below="@+id/pick_random_color"
                android:layout_marginTop="5dp"/>

            <RelativeLayout
                android:id="@+id/seperator_01"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/grey"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:layout_below="@+id/pick_from_image"/>

            <TextView
                android:id="@+id/tv_02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/converting_"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_below="@id/seperator_01"/>

            <LinearLayout
                android:id="@+id/convert_container_01"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:layout_below="@+id/tv_02"
                android:layout_marginTop="5dp">

                <Button
                    android:id="@+id/convert_rgb_to_hex"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rgb_to_hex"/>

                <Button
                    android:id="@+id/convert_hex_to_rgb"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hex_to_rgb"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/convert_container_02"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:layout_below="@+id/convert_container_01">

                <Button
                    android:id="@+id/convert_rgb_to_hsv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rgb_to_hsv"/>

                <Button
                    android:id="@+id/convert_hex_to_hsv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hex_to_hsv"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/convert_container_03"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:layout_below="@+id/convert_container_02">

                <Button
                    android:id="@+id/convert_hsv_to_rgb"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hsv_to_rgb"/>

                <Button
                    android:id="@+id/convert_hsv_to_hex"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/hsv_to_hex"/>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>